# src/identity_auth_server/k8s/k8s_query_service.py
@@ -1,12 +1,14 @@
 import logging
 from typing import Optional
+from uuid import UUID
 
 from pydantic import BaseModel
 
 from identity_auth_server.core.types import AppType, TokenResponse
 from identity_auth_server.k8s.repository import K8sMultiAgentSystemRepository
-from identity_auth_server.k8s.types import K8sTokenCache
+from identity_auth_server.k8s.types import K8sLlmCallMapping, K8sTokenCache
 from identity_auth_server.k8s.view_models import K8sMultiAgentSystemCRDViewModel
+from identity_auth_server.services.authorization_server import AuthorizationServerService
 
 
 logger = logging.getLogger(__name__)
@@ -27,9 +29,16 @@ class CacheTokenLoadRequest(BaseModel):
     tool: Optional[str] = None
 
 
+class LlmCallMappingStoreRequest(BaseModel):
+    id: str
+    trace_id: str
+    token: str
+
+
 class K8sQueryService:
-    def __init__(self, k8s_mas_repository: K8sMultiAgentSystemRepository):
+    def __init__(self, k8s_mas_repository: K8sMultiAgentSystemRepository, auth_service: AuthorizationServerService):
         self._k8s_mas_repository = k8s_mas_repository
+        self._auth_service = auth_service
 
     def get_mas_by_app_host(self, namespace: str, app_host: str) -> Optional[K8sMultiAgentSystemCRDViewModel]:
         mas = self._k8s_mas_repository.get_mas_by_app_host(namespace, app_host)
@@ -65,3 +74,21 @@ class K8sQueryService:
         if token is not None:
             return TokenResponse(access_token=token.access_token)
         return None
+
+    def store_llm_call_mapping(self, namespace: str, request: LlmCallMappingStoreRequest) -> K8sLlmCallMapping:
+        token = self._auth_service.introspect_token(request.token, None)
+        if token is None or not token.active:
+            raise Exception("Invalid token.")
+
+        call = K8sLlmCallMapping(
+            id=request.id,
+            app_id=token.app_id,
+            mas_id=token.mas_id,
+            namespace=namespace,
+            trace_id=request.trace_id,
+            user_input_id=token.user_input_id,
+        )
+        return self._k8s_mas_repository.store_llm_call_mapping(call)
+
+    def load_llm_call_mapping(self, call_id: str) -> K8sLlmCallMapping:
+        return self._k8s_mas_repository.load_llm_call_mapping(call_id)
